Update and clean up Firewall section

--- a/12-game-information.6
+++ b/12-game-information.6
@@ -238,14 +238,18 @@ Firewall is a secret, cross\-faction organization dedicated to safe\-guarding tr
 If anything threatens transhumanity as a whole, Firewall is dedicated to stopping that danger at any cost.
 The strength of Firewall rests in its members, known as \f[I]sentinels.\f[] Found in all factions and across all locales, sentinels are often diametrically opposed when it comes to social, economic, and political ideologies, to the point they might come to blows over their fervent beliefs.
 Yet when the survival of transhumanity is at stake, such extreme differences are set aside for the greater good.
+
 .SS History
 
 The origins of Firewall can be traced back to before the Fall, to several key organizations: the Lifeboat Institute the JASONs, and the Singularity Foundation.
+
 A non\-profit, non\-governmental organization, the Lifeboat Institute\[em]founded in the opening years of the 21st century\[em]represented the first, concrete attempts by citizens to recognize the dangers of uncontrolled technological development and to create an international organization to safeguard humanity.
 This institute developed several programs to research and protect against so\-called existential risks, from asteroid strikes to pandemics\[em]anything that might wipe humanity out.
-The JASON Association, established in the mid 20th century, was an independent scientific advisory board to the United States government.
+
+JASON, established in the mid 20th century, was an independent scientific advisory board to the United States government.
 Though tied to the MITRE Conglomerate\[em]which, though a nonprofit organization, was still intrinsically linked to the United States government\[em]the scientists involved with JASON were outside standard government oversight Though they spurred numerous technological developments for the government to deploy, they were also one of the first internationally recognized groups to predict global climate change.
 Prior to the Fall, many members of the JASONs and their supporters split away from the strict controls and reactionary agendas of the hypercorps and various nation states to form a new group, the Argonauts.
+
 The Singularity Foundation\[em]formed at the dawn of the 21st century\[em]was dedicated to the creation of safe artificial intelligence software, while raising awareness of the benefits and dangers AIs represented.
 A fervent believer in the singularity doctrine that technology would move towards a single explosion of advancements that would forever reshape humanity, the Singularity Foundation was a strong advocate for creating friendly AIs that would help protect humanity from an uncontrolled, dangerous singularity event.
 This group was significant in that it secretly succeeded in creating a group of friendly seed AIs before the Fall.
@@ -258,11 +262,14 @@ Though ultimately all attempts to prevent the Fall failed, untold numbers of tra
 During the crucible of the Fall and its immediate fallout, some of the surviving members of these and other groups came together and began to pool their resources.
 Acknowledging their weaknesses and the fractured state of transhumanity, they undertook drastic new measures, swearing to prevent another catastrophe of misused technologies.
 These methods would forge a new, powerful cross\-faction secret society known as Firewall.
+
 .SS Organization
 
 Firewall is a clandestine organization, with an unknown number of members, coordinated by an inner circle of dedicated veterans known as \f[I]proxies.\f[] Though its existence is known to many of the powerful and influential factions and individuals throughout the solar system, its existence is denied and its activities kept carefully shrouded.
-.SS Sentinels
 
+\fBSentinels\fR
+
+.RS 1
 Sentinels are the soldiers of Firewall, the reserve troops called to instant active status whenever danger is perceived Regardless of their location or current affairs, sentinels are expected to move instantly when called into play.
 It is their own responsibility to cover their absences from their \[lq]normal life\[rq] during each mission.
 
@@ -292,13 +299,15 @@ Additionally, each sentinel is required to upload a backup to Firewall's secure 
 
 Sentinels are all connected via the Eye, Firewall's peer\-to\-peer social network.
 Though each operates behind their assumed identity, they remain in contact, sharing information and resources as needed.
-.RS
 
-\f[B]OPTIONAL RULE: I\-REP\f[]  i\-Rep tracks the reputation a sentinel earns through their service to Firewall.
-i\-Rep is used with Networking: Firewall skill and tracked exactly like any other Reputation score (p.
-285).
+\f[B]Optional rule: I\-REP\f[]
+
+.RS 1
+i\-Rep tracks the reputation a sentinel earns through their service to Firewall.
+i\-Rep is used with Networking: Firewall skill and tracked exactly like any other Reputation score (p. 285).
 The important thing to keep in mind, however, is that Firewall agents come from all factions and are obligated to help each other, especially when a situation demands it.
 To reflect this extra advantage, gamemasters can choose to implement one or more of the following optional rules:
+
 .IP \[bu] 2
 \f[B]Networking Plus\f[]: To reflect that Firewall has agents throughout transhumanity, a character may use any Networking skill field with their i\- Rep.
 Favors bought with reputation still apply to the i\-rep score, no matter what network they were acquired from.
@@ -309,8 +318,11 @@ When the priority code is invoked, the sentinel receives a +30 modifier to their
 Sentinels know that priority codes are only to be used for emergency situations, however, when there are no other options.
 Abuse of priority codes is considered a serious breach of etiquette and abuse of resources, usually involving the agent's removal from Firewall.
 .RE
-.SS Proxies
+.RE
 
+\fBProxies\fR
+
+.RS 1
 Proxies are the inner circle of Firewall, the experienced cadre that keeps the machinery of their organization functioning.
 Though fewer in number than the sentinels, many proxies work full time on Firewall operations, serving as the group's essential infrastructure Most proxies are recruited from the ranks of the sentinels, brought in based on their skill sets and aptitudes to fill key roles.
 In a few rare cases, new proxies are fast\-tracked and recruited directly from outside of Firewall, usually based on their unique talents or placement within a certain organization, though such inductees face a battery of tests and trials far harsher than that used to vet sentinels.
@@ -323,7 +335,7 @@ Oftentimes this precedes bringing such sentinels into the proxy framework.
 Some tension exists within Firewall, mostly due to the influence of so many anarchists and other libertarian autonomists who take a dim view of centralized power, lack of transparency, and the potential for secretive operations to become entrenched and authoritarian As a result, there is a strong internal culture that seeks to minimize hierarchies and the accumulation of power, promoting transparency and direct democratic decision\-making.
 These desires sometimes clash with the clandestine nature of the organization, however, and the need for some secrets to be kept on a need\-to\-know basis.
 
-Unlike the loose organization of the sentinels, the proxies are grouped into \f[I]servers,\f[] collective working groups based upon certain skill sets and tasks.
+Unlike the loose organization of the sentinels, the proxies are grouped into \f[I]servers\f[], collective working groups based upon certain skill sets and tasks.
 To avoid creating power blocks within a given server, personnel are required to rotate between servers after one year of time.
 This incurs the added benefit of proxies learning new skill sets and increasing their usefulness to Firewall.
 The actions of each server are kept as transparent as possible, with major decisions brought to an e\-vote before the entire proxy membership However, speed often requires servers or individual proxies to move quicker than a vote will allow.
@@ -338,109 +350,152 @@ Despite these safeguards, however, rumors of power blocks within Firewall (both 
 Many of these are fueled by the alliances different cliques hold with each other.
 Others, however, whisper that there is a secret council among the proxies, working behind the scenes and holding on to knowledge they aren't sharing with the rest.
 
+.HP 1
 \f[B]Crows:\f[] Crows continue the goals of Firewall's predecessor organizations, such as the Lifeboat Institute and Singularity Foundation.
 Many of these are argonauts, promoting the development and use of new technologies that will benefit the transhuman condition and minimize risks rather than creating new threats or sparking new authoritarian uses\[em] and always conscious of unintended consequences.
 Perhaps more importantly, crows actively engage in background research of potential x\-risk vectors, whether those be aliens, the TITANs, terrorists, or hypercorp activity.
 Often they will deploy sentinels to aid in this research, via routers, whether this means conducting surveillance or breaking and entering to steal crucial data.
+.RE
 
+.RS 1
+.HP 1
 \f[B]Erasure Squads:\f[] Erasure squads are cleanup personnel They are called into action if sentinels fail to deal appropriately with a situation and the threat is moving beyond control.
 If the watchword for a sentinel is \[lq]unobtrusive,\[rq] the watchwords for an erasure squad are \[lq]overmatched firepower.\[rq] If activated, the time for a subtle solution is passed, and they will use whatever means necessary to resolve the situation.
 If that means nuking a settlement from orbit to annihilate a nanoswarm and keep it from escaping to a larger settlement, then so be it.
 After which they'll use every trick in Firewall's bag to erase any evidence they were there and to place the blame for the incident squarely on the shoulders of some other party.
 If necessary, erasure squads can also be called in to fix a sentinel op that has turned into a clusterfuck or otherwise gone south.
 They are very careful to avoid exposure in such situations, however, which sometimes merely means eliminating all traces of Firewall involvement and letting the sentinels take the fall for their poor choices.
+.RE
 
+.RS 1
+.HP 1
 \f[B]Routers:\f[] Routers are mission coordinators.
 They work closely with scanners and crows, activating the appropriate sentinels whenever a new danger rears up.
 Each router has the authority to measure the threat and activate an appropriate number of sentinels\[em] whatever is required to accomplish the mission in the least intrusive manner possible.
 They are also authorized to divert Firewall resources to aid these missions, within appropriate parameters.
 Routers are held responsible for the ultimate success of a mission A failed mission will result in a reviewing board staffed by their peers.
+.RE
 
+.RS 1
+.HP 1
 \f[B]Scanners:\f[] Tasked with keeping alert for any sign of new active threats, scanners are the eyes and ears of Firewall.
 The scanners maintain a close eye on news\-feeds and mesh traffic, even maintaining taps inside certain government and hypercorp communication channels.
 If a danger is detected, it is under their authority through routers, that sentinels are activated.
 Due to the power inherent in a scanners' post, they are held accountable for false activations.
+.RE
 
+.RS 1
+.HP 1
 \f[B]Social Engineers:\f[] Nick\-named the Ministry of Disinformation social engineers provide the scapegoating and plausible deniability that is required by Firewall and its sentinels.
 If a sentinel compromises their position and endangers the organization, social engineers step in to cover cracks in the facade.
 They work intrinsically with erasure squads when one is activated to ensure the over\-the\-top steps taken to eliminate a threat are well concealed and ultimately erased.
 The power wielded by social engineers can be significant, as it ultimately decides (usually through e\-voting consensus, though time does not always allow such a luxury) what organization\[em]political, corporate, independent etc.\[em]will take the blame and subsequent fallout for erasure squad actions.
+.RE
 
+.RS 1
+.HP 1
 \f[B]Vectors:\f[] Vectors are Firewall's communications security and digital intrusion specialists\[em]in other words, hackers.
 In addition to defending the mesh security of all Firewall operations, vectors are also deployed to aid in crow research, scanner monitoring, and to eliminate the trail of erasure squads.
 Vectors also assist routers in maintaining communications, command and control of a situation, and are sometimes called in to provide overwatch of sentinel operations, especially if a particular sentinel squad lacks their own hacking resources.
 Needless to say, vectors are supplied with some of the best intrusion and security tools transhumanity has to offer.
 .RS
+.RE
 
-\f[B]CLIQUES\f[]  Though Firewall proxies follow stringent guidelines to ensure the organization is not subverted from within or turned into a powerful organization under the thumb of a few individuals with their own personal agendas, the nature of transhumanity ensures that various factions and tendencies exist within the group.
+\f[B]Cliques\f[]
+
+.RS 1
+Though Firewall proxies follow stringent guidelines to ensure the organization is not subverted from within or turned into a powerful organization under the thumb of a few individuals with their own personal agendas, the nature of transhumanity ensures that various factions and tendencies exist within the group.
 Termed cliques, these circles of influence sometimes create ripples in the pool that all Firewall personnel must eventually deal with.
 Some of these cliques are grounded in transhumanity's existing factions, while others are rooted in philosophical differences regarding the approach Firewall should be taking.
 Gamemasters can use these cliques to flesh out internal tensions within Firewall or to simply throw some curve balls to keep players on their toes.
 
-\f[B]Backups\f[]: The backup clique believes that transhumanity's best chance for survival is to deploy numerous redundant backup measures as soon as possible.
+.HP 1
+\f[B]Backups\f[]:
+The backup clique believes that transhumanity's best chance for survival is to deploy numerous redundant backup measures as soon as possible.
 These include creating as many extrasolar colonies as possible, both via Pandora Gates and through more traditional means, such as ark ships and infomorph/nanofabricator seed ships.
+.RE
 
+.RS 1
+.HP 1
 \f[B]Conservatives\f[]: This clique takes an overcautious, nuke\-it\-from\-orbit approach to most x\-risks.
 They believed excessive force is justifi ed, and it's far better to be safe than extinct.
 This clique is also opposed to the use of alien/ TITAN artifacts and psi, and tends to be xenophobic/ isolationist regarding the Factors and Pandora Gates.
+.RE
 
+.RS 1
+.HP 1
 \f[B]Mavericks\f[]: The mavericks disdain Firewall's collective and bureaucratic tendencies, taking a more individualistic approach to their work.
 They are known to sometimes circumvent Firewall procedures, taking risks and allocating resources without approval from other proxies.
+.RE
 
+.RS 1
+.HP 1
 \f[B]Pragmatists\f[]: The pragmatists believe in using any and all tools at their disposal to counter existential risks.
 They are in favor of using xeno\-artifacts, asyncs, and anything else that will save transhumanity.
+.RE
 
+.RS 1
+.HP 1
 \f[B]Structuralists\f[]: This clique advocates for a stronger structure and centralized authority within Firewall, countering the group's autonomistdominated tendencies.
 Many also advocate for going legitimate, taking Firewall into the public eye and making above\-board connections with other official organizations, arguing that this could bring more resources to Firewall's disposal.
 .RE
+.RE
+.RE
+
 .SS Methods
 
 Unobtrusive\[em]that is the standard operating procedure for any sentinel.
-Firewall's continued success relies on its secrecy.
-The larger the footprint it leaves during a given mission the easier it is for other organizations to monitor Firewall's efforts or even attempt to infiltrate the group.
-As such, Firewall constantly works to expand its base of allies (using assets from those ally organizations in place of its own as much as possible), place long\-term moles, conduct remote operations (hacking in place of on\-site personnel), small group infiltrations activating only as many sentinels as required to achieve mission goals), and so on.
+Firewall’s continued success relies on its secrecy.
+The larger the footprint it leaves during a given mission the easier it is for other organizations to monitor Firewall’s efforts or even attempt to infiltrate the group.
+To keep a low profile, Firewall consistently works to acquire allies with influence in other organizations, using those groups as a front for their activities when possible.
+Many of these \[lq]allies\[rq] are misled regarding Firewall's intentions and true purpose.
+Many operations are conducted remotely (via hacking instead of sending in sentinels) or via uninformed freelancers.
+When it is necessary to activate sentinels, small group infiltrations are preferred, using the minimum number of personnel necessary to achieve the mission goals.
 
-When it comes to allies, Firewall often obfuscates its real intentions and even its real identity.
-Often such allies are gained through the use of well\-placed sentinels who act on behalf of their own non\-Firewall positions to gain access to another organization's resources.
-At the end of the day, however, a slice of these resources are secretly set aside for Firewall's future use.
+Firewall also frequently infiltrates and places long-term moles within other organizations in order to exploit their assets, freeing it from having to deploy its own resources.
+Sentinels are sometimes recruited for this very purpose, so they may take advantage of their non-Firewall positions and secretly access another group’s resources or set them aside for Firewall’s future use.
 For example, a department head at Starware may have spent years sealing a deal to ship crucial spacecraft parts to the isolationist Jovian Junta.
-The lucrative deal brings huge prestige, a job promotion, and a salary increase, all accomplishments the department head strives for in his regular life.
-Yet this particular department head is a long\-standing sentinel, so such accomplishments bring allies to Firewall, whether they know it or not.
-Not only can the department head siphon off a thin stream of revenue for Firewall use (hidden thoroughly by vectors), but he's also in a position to move sentinels, as needed, into the Jovian Junta habitats (or personnel out), a job usually extremely difficult to accomplish.
-The danger of such an act, of course\[em]and the consequences of losing such a critically placed sentinel\[em]means such a use of resources is reserved for only the most dire threats.
+The lucrative deal brings huge prestige, a job promotion, and a salary increase, all accomplishments the department head strives for in their regular life.
+Yet this particular department head is a long-standing sentinel and this deal is a fantastic new opening for Firewall.
+Not only can the department head siphon off a thin stream of revenue for Firewall use (hidden thoroughly by vectors), but they’re also in a position to smuggle sentinels into (or out of) the Jovian Junta habitats, a job usually extremely difficult to accomplish.
+The risks to such activities\[em]and the consequences of losing a critically placed sentinel\[em]mean that this opportunity is reserved for important operations and dire threats.
 
-In additional to aid from ally organizations, Firewall places caches of supplies on different habitats and worlds, available to sentinels as needed.
-How many and which sentinels are aware of which caches depends wholly on the situation and on the decisions of the router(s) involved.
-In a given habitat a cache may include weaponry and equipment of escalating power, archived information, or even relics stashed from previous missions until Firewall decides what to do with them.
-Large habitats may even feature several caches, with routers only revealing the ones with heavy firepower when absolutely needed.
-Some caches may be so dangerous, however, that once a mission is complete, a router will authorize the cortical stack destruction of all sentinels involved, resleeving them to a backup that has no knowledge of the cache's existence.
+In an attempt to be prepared for rapidly developing situations, Firewall places caches of supplies on numerous habitats and worlds, available to sentinels as needed.
+The composition and availability of these caches to sentinels depends wholly on the situation and on the decisions of the router(s) involved.
+These caches can hold weapons, armor, nanofabricators, archived information, or even relics stashed from previous missions until Firewall decides what to do with them.
+Large habitats may even be home to several caches, with routers only revealing the ones with heavy firepower when absolutely needed.
+Some caches may be so dangerous, however, that once a mission is complete, a router will authorize the cortical stack destruction of all sentinels involved, resleeving them to a backup that has no knowledge of the cache’s existence.
 
 As noted under erasure squads, Firewall will not hesitate to react with swift and unequivocal force if an unobtrusive approach has failed and the danger reaches a certain threat level.
-What constitutes a \[lq]threat threshold\[rq] is actually calculated by specialized risk assessment software and may change from mission to mission according to other external factors In some instances, if the situation is dangerous enough and the scale of the consequences of failure large enough, a Promethean will be tapped to calculate the threat level and decide when it is time to tactically withdrawal and \[lq]thermally cleanse.\[rq]
-.RS
+What constitutes a \[lq]threat threshold\[rq] is actually calculated by specialized risk assessment software and may change from mission to mission according to other external factors.
+If the situation is dangerous enough and the scale of the consequences of failure sufficiently large, a Promethean will be tapped to calculate the threat level and decide when it is time to tactically withdraw and \[lq]thermally cleanse.\[rq]
 
-\f[B]WHAT HELP CAN A SENTINEL EXPECT?\f[]  Exactly what help Firewall provides to a sentinel during a mission is wholly dependent upon the situation and the gamemaster.
-Generally speaking, Firewall's unobtrusive approach also applies to activated sentinels, meaning that sentinels are largely left to operate on their own accord.
-Beyond access to a cache of supplies\[em] usually under\-stated, forcing a sentinel to use their own resources if they want more\[em] Firewall expects its sentinels to be capable of handling a situation.
-In addition to their skills and wits, sentinels can, of course, rely heavily on their i\-rep to gain the resources and favors they need to achieve success.
+\fBWhat help can a Sentinel expect?\fR
+
+.RS 1
+Exactly what help Firewall provides to a sentinel during a mission is wholly dependent upon the situation and the gamemaster.
+Generally speaking, Firewall’s unobtrusive approach also applies to activated sentinels, meaning that sentinels are largely left to operate on their own accord.
+Beyond access to a cache of supplies\[em]usually limited, forcing a sentinel to use their own resources if they want more\[em]Firewall expects its sentinels to be capable of handling a situation.
+In addition to their skills and wits, sentinels can, of course, rely heavily on their i-rep to gain the resources and favors they need to achieve success.
 
 In some rare cases, the gamemaster may decide that a situation warrants more or less equipment in a cache or help from social engineers or vectors.
-Such intervention should be kept to a minimum, however, to lesson the players' feelings of Deus Ex Machina, ensuring the appropriate response of awe when such events do occur.
+Such intervention should be kept to a minimum, however, to lessen the players' feelings of Deus Ex Machina, ensuring the appropriate response of awe when such events do occur.
 
 The one thing for which Firewall can always be relied on is backup insurance.
-Any Firewall killed in the line of duty will be resleeved at Firewall's expense\[em]though the morph used and whether the sentinel was backed up from their cortical stack or a backup (perhaps even an old backup) depends entirely on the circumstances of death and their router's whim.
+Any Firewall operative killed in the line of duty will be resleeved at Firewall’s expense\[em]though the morph used and whether the sentinel is backed up from their cortical stack or a backup (perhaps even an old backup) depends entirely on the circumstances of death and their router's whim.
 Firewall usually makes an extra effort to retrieve cortical stacks, however, not in the least as they don't want their agents' backups falling into the wrong hands.
 
 Similarly, if a Firewall mission involves egocasting or travel to another destination, Firewall will usually foot the bill.
 In many cases it is easier for sentinels to cover the expense themselves and bill Firewall later, but in times of need Firewall can be called on to handle such expenses directly.
 .RE
+
 .SS Long\-Term Strategies And Goals
 
 The overriding goals of Firewall are to prevent existential threats and protect transhumanity.
 However, that is not their only goal.
 Their exact goals can and should remain directed by the gamemaster as it applies to a given playing group and a campaign.
-This can also depend heavily on the particular cliques that a given gamemaster is emphasizing (see \f[I]Cliques,\f[] p.
-\f[B]359\f[]).
+This can also depend heavily on the particular cliques that a given gamemaster is emphasizing (see \f[I]Cliques,\f[] p. \f[B]359\f[]).
+
 The following is an easy\-to\-use selection of long\-term strategies and goals that a gamemaster can use as desired:
 .IP \[bu] 2
 Seeding other star systems
@@ -458,6 +513,8 @@ Figuring out the Factors
 Making contact with other aliens
 .IP \[bu] 2
 Finding out what happened to the Iktomi and other xeno\-archeological oddities
+.RE
+
 .SS Firewall And Other Organizations
 
 The level to which Firewall has infiltrated other organizations (and vice versa!) is intentionally left a blank slate.
