Clean up section 'The ETI'

--- a/12-game-information.6
+++ b/12-game-information.6
@@ -50,7 +50,8 @@ Others worried that it could be a technological singularity event, such as the T
 In fact, alien races do exist, and they have been around for far, far longer than transhumanity.
 New ones, however, are simply rare, as few have managed to elude destruction at the hands of the ETI.
 
-The ETI (extraterrestrial intelligence) is the civilization that dominates galactic life in \f[I]Eclipse Phase.\f[] The ETI is incredibly old and powerful\[em]a Type III or even Type IV civilization on the Kardashev scale.
+The ETI (extraterrestrial intelligence) is the civilization that dominates galactic life in \f[I]Eclipse Phase.\f[]
+The ETI is incredibly old and powerful\[em]a Type III or even Type IV civilization on the Kardashev scale.
 It is capable of megascale engineering projects and enjoys an understanding of physics, matter, energy, and universal laws that makes all of transhuman knowledge seem insignificant in comparison.
 Most likely, the ETI itself evolved from some sort of artificial intelligence singularity event in its own past, ascending to a godlike level of super\-intelligence.
 It may no longer be recognizably biological.
@@ -65,7 +66,6 @@ New life evolves, creates technology develops something akin to seed AI, and the
 Most civilizations do not survive, as evidenced by the Iktomi (p. 377).
 Others do, such as the Factors (p. 373), but they remain forever changed by the experience.
 It was one of these ETI probes that begins our story, traveling to the Sol system some uncounted millions\[em]if not billions\[em]of years ago, where it set its trap and patiently began to wait.
-.RS
 
 .SS The ETI Agenda
 
@@ -531,28 +531,30 @@ Some hypercorps, however, believe they can infiltrate the organization and use i
 
 .SH The ETI
 
-As noted under \f[I]Extraterrestrial Intelligences,\f[] p. 352, the ETI is the advanced alien civilization responsible for the Exsurgent virus (p.
-362), and by extension, the corruption of the TITANs and the Fall.
+As noted under \f[I]Extraterrestrial Intelligences,\f[] p. 352, the ETI is the advanced alien civilization responsible for the Exsurgent virus (p. 362), and by extension, the corruption of the TITANs and the Fall.
+
 No one, not even the Factors, has encountered a member (if such exists) of the ETI civilization so far.
 Since it is an intelligence far beyond transhumanity, it likely won't play much of a direct role within \f[I]Eclipse\f[] \f[I]Phase\f[], though those who learn the truth about the Exsurgent virus and the Fall may rightly fear the future.
 No one can even imagine what might happen next, however, or know for certain that the ETI has not set more \[lq]traps\[rq] similar to their bracewell probes or if they have other messengers or servants active in the galaxy.
-With things such as the Pandora Gates at transhumanity's disposal, it may just be a matter of time before transhuman explorers run afoul some other aspect of the ETI's existence and activities.
+With things such as the Pandora Gates at transhumanity's disposal, it may just be a matter of time before transhuman explorers run afoul of some other aspect of the ETI's existence and activities.
+
 It is important to keep the nature of the ETI in perspective.
 While transhumanity has managed what it considers wonders with a small handful of resources available from a few planets and other objects in a bare handful of star systems, the ETI has had an entire galaxy at its disposal for eons.
 Engineering projects on a massive scale\[em]dyson spheres, matrioshka brains, Jupiter brains, stellar engines\[em]are within its capabilities.
 This ETI uses star clusters as transhumanity uses fields or rich mineral veins.
 Given its potential, the ETI likely exists primarily on the galactic rim, far from the galactic center, where lower temperatures and scarcer matter make for a good thermodynamic environment The powers in the deep cold dark on the edge of the Milky Way have been self\-aware since before Earth was so much as a ripple in warming gas around the not\-yet\-ignited Sun.
+
 Despite what those\-in\-the\-know in the \f[I]Eclipse\f[] \f[I]Phase\f[] universe may think, the ETI is not necessarily hostile towards other races like transhumanity (depending on its outlook; see p. 353), at least not in the way as transhumanity would define animosity because of religious, ethnic, racial, or cultural difference.
 Most likely the ETI is simply indifferent, concerned with matters on scales on which transhumanity does not even register.
 Or it may think of transhumanity like a living body might recognize an infection or parasite\[em]something the immune system will suppress and deal with.
-.RS
 
-\f[B]HANDLING ALIENS\f[]  Though only a handful of aliens have been introduced to Eclipse Phase so far, gamemaster may wish to introduce their own.
+.SS Handling Aliens
+
+Though only a handful of aliens have been introduced to Eclipse Phase so far, gamemaster may wish to introduce their own.
 This is perfectly acceptable, though we strongly recommend that any and all alien life be portrayed as convincingly alien.
 Life forms that have evolved in drastically different environmental circumstances from humans and that grew into intelligence by a different path should seem, at best, bizarre, unusual, and weird.
 There is no guarantee that a xenomorph's thought processes or modes of thinking are in any way similar to transhuman ones, or even that their emotional responses (based on a completely different biology\[em]if they have emotions, that is) are in the same ballpark.
 Communication is likely to be a challenge, and misunderstandings are practically guaranteed.
-.RE
 
 .SH Exhumans
 
