Clean up section 'Exhumans'

--- a/12-game-information.6
+++ b/12-game-information.6
@@ -570,6 +570,7 @@ Some have also adopted an antagonistic view of their former transhuman species, 
 This has spurred some exhumans to actively attack and ravage transhuman settlements and ships, though usually in isolated areas.
 
 A few examples of exhumans are described below, though gamemasters are encouraged to develop their own.
+
 .SS Neurodes
 
 Seeking to achieve a new level of super\-intelligence and conscience, neurodes have abandoned the typical transhuman sleeve in exchange for a multipedal neuronal shell that is both body and brain at the same time.
@@ -587,10 +588,19 @@ r0 r r r r r r r r l0.
 | \fBCOG\fR  | \fBCOO\fR | \fBINT\fR | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
 | 40         | 10        | 40        | 20        | 30        | 10        | 40        | \[en]     |
 | \fIINIT\fR | \fBSPD\fR | \fBLUC\fR | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
-| 120        | 1         | 80        | 16        | 160       | 35        | 7         | 53        |
+| 12         | 1         | 80        | 16        | 160       | 35        | 7         | 53        |
 .TE
 
-\f[B]Skills:\f[] Fray 30, Investigation 80, Perception 90, others as appropriate \f[B]Implants:\f[] Access Jacks, Carapace Armor, Circadian Regulation, Direction Sense, Eidetic Memory, Endocrine Control, Hyper Linguist, Math Boost, Medichines, Multi\-Tasking, Oracle, Skillware \f[B]Notes:\f[] Mental Disorder trait x 2
+.HP 1
+\f[B]Skills:\f[] Fray 30, Investigation 80, Perception 90, others as appropriate
+.RE
+.HP 1
+\f[B]Implants:\f[] Access Jacks, Carapace Armor, Circadian Regulation, Direction Sense, Eidetic Memory, Endocrine Control, Hyper Linguist, Math Boost, Medichines, Multi\-Tasking, Oracle, Skillware
+.RE
+.HP 1
+\f[B]Notes:\f[] Mental Disorder trait x 2
+.RE
+
 .SS Predators
 
 Predators seek to transform themselves into an ultimate top\-of\-the\-food\-chain evolutionary contender.
@@ -609,11 +619,18 @@ r0 r r r r r r r r l0.
 | \fBCOG\fR  | \fBCOO\fR | \fBINT\fR | \fBREF\fR | \fBSAV\fR | \fBSOM\fR | \fBWIL\fR | \fBMOX\fR |
 | 30         | 40        | 40        | 40        | 15        | 40        | 30        | \[en]     |
 | \fIINIT\fR | \fBSPD\fR | \fBLUC\fR | \fITT\fR  | \fIIR\fR  | \fBDUR\fR | \fIWT\fR  | \fIDR\fR  |
-| 160        | 3         | 60        | 12        | 120       | 65        | 13        | 98        |
+| 16         | 3         | 60        | 12        | 120       | 65        | 13        | 98        |
 .TE
 
-\f[B]Skills:\f[] Blades 60, Fray 60, Free Fall 50, Freerunning 80, Investigation 50, Perception 60, Unarmed Combat 70 \f[B]Implants:\f[] Adrenal Boost, Carapace Armor (11/11), Chameleon Skin, Cyberclaws, Drug Glands, Endocrine Control, Enhanced Hearing, Enhanced Smell, Enhanced Vision, Grip Pads, Hardened Skeleton, Medichines, Muscle Augmentation, Neurachem (Rating 2), Oxygen Reserve, Poison Gland, Prehensile Feet, Prehensile Tail, Respirocytes, Temperature Tolerance, Toxin Filters, Vacuum Sealing, plus any other
-mods the gamemaster feels appropriate \f[B]Notes:\f[] Mental Disorder trait x 2
+.HP 1
+\f[B]Skills:\f[] Blades 60, Fray 60, Free Fall 50, Freerunning 80, Investigation 50, Perception 60, Unarmed Combat 70
+.RE
+.HP 1
+\f[B]Implants:\f[] Adrenal Boost, Carapace Armor (11/11), Chameleon Skin, Cyberclaws, Drug Glands, Endocrine Control, Enhanced Hearing, Enhanced Smell, Enhanced Vision, Grip Pads, Hardened Skeleton, Medichines, Muscle Augmentation, Neurachem (Rating 2), Oxygen Reserve, Poison Gland, Prehensile Feet, Prehensile Tail, Respirocytes, Temperature Tolerance, Toxin Filters, Vacuum Sealing, plus any other mods the gamemaster feels appropriate
+.RE
+.HP 1
+\f[B]Notes:\f[] Mental Disorder trait x 2
+.RE
 
 .SH The Exsurgent Virus
 
